Closed Bug 973875 Opened 10 years ago Closed 10 years ago

CanvasClient2D::Update should not keep the TextureClient's DrawTarget after Unlock

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: nical, Assigned: nical)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → nical.bugzilla
Attachment #8377541 - Flags: review?(bjacob)
Attachment #8377541 - Flags: review?(bjacob) → review+
https://hg.mozilla.org/mozilla-central/rev/f516f1a8f306
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: