Bug 973875 - Make CanvasClient2D not keep a TextureClient's DrawTarget after unlocking its memory. r=bjacob